RESOLVED FIXED160671
Parser<LexerType>::parseFunctionInfo() has the wrong info about captured vars when a function is not cached.
https://bugs.webkit.org/show_bug.cgi?id=160671
Summary Parser<LexerType>::parseFunctionInfo() has the wrong info about captured vars...
Mark Lam
Reported 2016-08-08 15:59:53 PDT
Created attachment 285595 [details] Repro test case. Steps to repro: 1. Apply the following patch to disable the function cache. Index: Source/JavaScriptCore/parser/Parser.cpp =================================================================== --- Source/JavaScriptCore/parser/Parser.cpp (revision 204127) +++ Source/JavaScriptCore/parser/Parser.cpp (working copy) @@ -1954,6 +1954,7 @@ template <class TreeBuilder> bool Parser FunctionBodyType functionBodyType; auto loadCachedFunction = [&] () -> bool { + if (true) return false; ASSERT(parametersStart != -1); ASSERT(startColumn != -1); 2. Run jsc on the attached test case. It ends up throwing the following invalid error: Exception: ReferenceError: Can't find variable: inner /Volumes/Data/objcjsc/tests/test.js:9:52 foo2@/Volumes/Data/objcjsc/tests/test.js:12:17 goo2@/Volumes/Data/objcjsc/tests/test.js:14:9 global code@/Volumes/Data/objcjsc/tests/test.js:15:3
Attachments
Repro test case. (298 bytes, application/x-javascript)
2016-08-08 15:59 PDT, Mark Lam
no flags
patch (5.54 KB, patch)
2016-08-09 13:28 PDT, Saam Barati
no flags
Radar WebKit Bug Importer
Comment 1 2016-08-08 16:01:12 PDT
Saam Barati
Comment 2 2016-08-09 13:28:21 PDT
Mark Lam
Comment 3 2016-08-09 13:42:03 PDT
Comment on attachment 285666 [details] patch r=me
WebKit Commit Bot
Comment 4 2016-08-09 15:04:56 PDT
Comment on attachment 285666 [details] patch Clearing flags on attachment: 285666 Committed r204305: <http://trac.webkit.org/changeset/204305>
WebKit Commit Bot
Comment 5 2016-08-09 15:05:00 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.