Source/JavaScriptCore/runtime/Options.h
@@ -379,6 +379,8 @@ typedef const char* optionString;
     \
     v(bool, reportLLIntStats, false, Configurable, "Reports LLInt statistics") \
     v(optionString, llintStatsFile, nullptr, Configurable, "File to collect LLInt statistics in") \
+    \
+    v(bool, useSourceProviderCache, true, Normal, "If false, the parser will not use the source provider cache. It's good to verify everything works when this is false. Because the cache is so successful, it can mask bugs.") \
 
 enum OptionEquivalence {
     SameOption,
